#197 fix tests